Claude/review permissions system wcm yz (#148)
* feat: Implement flexible role-based permission system

Major changes:
- Add granular permissions system with 47 individual permissions
- Create custom roles with configurable permissions
- Backend enforcement on all API routes
- New Roles management UI for admins
- Migration from fixed roles to roleId-based system

Backend:
- New types/permissions.ts with all permission definitions
- New services/roles.ts for role CRUD operations
- New middleware/permissions.ts for route protection
- New routes/roles.ts for roles API
- Updated users.ts to use roleId instead of role
- Added requirePermission middleware to all routes

Frontend:
- New api/roles.ts API client
- New views/Roles.vue management page
- Updated auth store with hasPermission functions
- Updated Sidebar.vue for dynamic navigation
- Updated Users.vue to use dynamic roles
- Added i18n translations (EN, DE)

Default system roles: Admin, Moderator, Operator, Viewer

* feat: Add automatic session invalidation system

- Add tokenVersion to User model for tracking session validity
- Invalidate tokens when user password or role changes
- Track deleted users to reject their tokens immediately
- Invalidate all users' sessions when role permissions change
- Frontend auto-logout with informative messages on 401 errors
- Login page displays reason for forced logout

Security improvements:
- Deleted users are immediately logged out
- Password changes force re-authentication
- Role changes force re-authentication
- Permission changes cascade to all affected users

* Add frontend permission checks to hide unauthorized UI elements

- QuickActions: Hide start/stop/restart/backup buttons based on permissions
- Players: Hide kick/ban/heal/teleport/gamemode/etc buttons based on permissions
- Backups: Hide create/restore/delete/download buttons based on permissions
- Terminal: Hide command input if user lacks console.execute permission
- Configuration: Hide save buttons if user lacks

--- a/manager/frontend/src/i18n/en.json
+++ b/manager/frontend/src/i18n/en.json
@@ -21,7 +21,8 @@
     "remove": "Remove",
     "clear": "Clear",
     "previous": "Previous",
-    "next": "Next"
+    "next": "Next",
+    "noPermission": "You don't have permission to perform this action"
   },
   "auth": {
     "login": "Login",
@@ -53,7 +54,8 @@
     "scheduler": "Scheduler",
     "statistics": "Statistics",
     "assets": "Asset Explorer",
-    "chat": "Chat Log"
+    "chat": "Chat Log",
+    "roles": "Roles"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -129,7 +131,8 @@
     "showAll": "All",
     "showErrors": "Errors",
     "showWarnings": "Warnings",
-    "showInfo": "Info"
+    "showInfo": "Info",
+    "bypassWarning": "Warning: Console access allows executing all server commands, bypassing UI permission restrictions."
   },
   "backups": {
     "title": "Backup Management",
@@ -711,6 +714,55 @@
     "notInstalled": "EasyWebMap Not Installed",
     "notInstalledDesc": "The EasyWebMap mod is not installed. Install it from the Mod Store to enable the live web map feature.",
     "goToModStore": "Go to Mod Store"
+  },
+  "roles": {
+    "title": "Role Management",
+    "subtitle": "Manage user roles and permissions",
+    "create": "Create Role",
+    "createRole": "Create Role",
+    "edit": "Edit Role",
+    "editRole": "Edit Role",
+    "delete": "Delete Role",
+    "name": "Role Name",
+    "namePlaceholder": "Enter role name",
+    "nameRequired": "Role name is required",
+    "description": "Description",
+    "descriptionPlaceholder": "Enter role description",
+    "noDescription": "No description",
+    "color": "Color",
+    "permissions": "Permissions",
+    "permissionCount": "{count} permissions",
+    "permissionsSelected": "permissions selected",
+    "noPermissionsAvailable": "No permissions available",
+    "system": "System",
+    "systemRole": "System Role",
+    "systemRoleNote": "System roles cannot be renamed or deleted. Only permissions can be modified.",
+    "customRole": "Custom Role",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
+    "confirmDelete": "Are you sure you want to delete the role \"{name}\"?",
+    "cannotDeleteSystem": "System roles cannot be deleted",
+    "noRoles": "No roles found"
+  },
+  "permissionCategories": {
+    "dashboard": "Dashboard",
+    "server": "Server",
+    "console": "Console",
+    "performance": "Performance",
+    "players": "Players",
+    "chat": "Chat",
+    "backups": "Backups",
+    "scheduler": "Scheduler",
+    "worlds": "Worlds",
+    "mods": "Mods",
+    "plugins": "Plugins",
+    "config": "Configuration",
+    "assets": "Assets",
+    "users": "Users",
+    "roles": "Roles",
+    "activity": "Activity",
+    "hytale_auth": "Hytale Auth",
+    "settings": "Settings"
   },
   "assets": {
     "title": "Asset Explorer",
