Claude/review panel security z m6 te (#174)
* Improve panel security for production environments

Security improvements:
- Remove insecure default credentials - system now requires explicit configuration
- Add strict security mode that blocks startup with insecure config
- Change CORS default from wildcard (*) to empty - must be explicitly configured
- Add CSRF protection via Origin/Referer validation for state-changing requests
- Implement WebSocket ticket system for secure authentication
  - Single-use, short-lived (30s) tickets instead of JWT in URL
  - Prevents token exposure in browser history, logs, and referer headers
- Enforce JWT algorithm (HS256) to prevent algorithm downgrade attacks
- Update .env.example with security documentation

The panel now requires these environment variables:
- MANAGER_USERNAME
- MANAGER_PASSWORD (min 12 chars recommended)
- JWT_SECRET (min 32 chars required)
- CORS_ORIGINS (specific origins, not wildcard)

Set SECURITY_MODE=warn to bypass checks (for closed networks only).

* Comprehensive security hardening - Multiple fixes

Security Fixes:
- Add command whitelist to prevent injection (sanitize.ts, docker.ts)
- Add ReDoS protection for regex patterns (assets.ts)
- Add path traversal protection to mod/plugin delete/toggle (management.ts)
- Add magic byte verification for file uploads (management.ts)
- Add safe filename generation for uploads (management.ts)
- Fix race condition in player tracking with debounced saves (players.ts)
- Replace blocking bcrypt.sync with async versions (users.ts)
- Increase minimum password length to 8 characters (users.ts)

Infrastructure Security:
- Add express.json body limit (100kb) to prevent DoS
- Add global exception handler to prevent stack trace leaks
- Add Content-Security-Policy header
- Add CSRF protection via Origin/Referer validation
- Run manager container as non-root user (UID 1001)
- Add dumb-init for proper signal handling
- Remove hardcoded secrets from docker-compose.yml (require e

--- a/manager/frontend/src/i18n/pt_br.json
+++ b/manager/frontend/src/i18n/pt_br.json
@@ -22,7 +22,13 @@
     "clear": "Limpar",
     "previous": "Anterior",
     "next": "Próximo",
-    "noPermission": "Você não tem permissão para realizar esta ação"
+    "noPermission": "Você não tem permissão para realizar esta ação",
+    "dismiss": "Dispensar"
+  },
+  "health": {
+    "permissionIssue": "Problema de Permissão de Arquivo Detectado",
+    "permissionIssueDesc": "O gerenciador não consegue escrever em alguns diretórios de dados. Isso geralmente acontece após atualizar para v2.0.0, que roda como usuário não-root (UID 1001) por segurança.",
+    "fixCommand": "Execute este comando no host para corrigir as permissões"
   },
   "auth": {
     "login": "Entrar",
